tests/baselines/reference/emitArrowFunctionWhenUsingArguments19.errors.txt
tests/cases/conformance/es6/arrowFunction/emitArrowFunctionWhenUsingArguments19.ts(6,33): error TS2496: The 'arguments' object cannot be referenced in an arrow function in ES3 and ES5. Consider using a standard function expression.
tests/cases/conformance/es6/arrowFunction/emitArrowFunctionWhenUsingArguments19.ts(7,17): error TS2400: Expression resolves to variable declaration '_arguments' that compiler uses to capture 'arguments' reference.


==== tests/cases/conformance/es6/arrowFunction/emitArrowFunctionWhenUsingArguments19.ts (2 errors) ====
    
    function f() {
        function g() {
            var _arguments = 10;                // No capture in 'g', so no conflict.
            function h() {
                var capture = () => arguments;  // Should trigger an '_arguments' capture into function 'h'
                                    ~~~~~~~~~
!!! error TS2496: The 'arguments' object cannot be referenced in an arrow function in ES3 and ES5. Consider using a standard function expression.
                foo(_arguments);                // Error as this does not resolve to the user defined '_arguments'
                    ~~~~~~~~~~
!!! error TS2400: Expression resolves to variable declaration '_arguments' that compiler uses to capture 'arguments' reference.
            }
        }
    
        function foo(x: any) {
            return 100;
        }
    }